removed taxonomy archive pages / removed client single page / fixed nav wrapping

--- a/assets/scss/partials/_navigation.scss
+++ b/assets/scss/partials/_navigation.scss
@@ -89,7 +89,7 @@
 
     // main menu and links
     &__wrapper {
-        max-width: 23rem;
+        max-width: 26rem;
         margin-bottom: 3rem;
 
         @include mq(1060px) {
